deployment/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o deployment
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: database
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: database
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o deployment
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/private-network: "true"
        io.kompose.service: database
    spec:
      containers:
        - image: acrcloud2020.azurecr.io/database:1.0.0
          name: database
          ports:
            - containerPort: 8080
            - containerPort: 9090
          resources:
            limits:
              cpu: 500m
              memory: "536870912"
      restartPolicy: Always
      terminationGracePeriodSeconds: 180
status: {}
