deployment/web-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert -o deployment/
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.network/private_network: "true"
    io.kompose.service: web
  name: web
spec:
  containers:
    - image: app:1.0.1
      name: web
      ports:
        - containerPort: 8081
      resources:
        limits:
          cpu: 500m
          memory: "536870912"
  restartPolicy: OnFailure
  terminationGracePeriodSeconds: 180
status: {}
