deployment/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o deployment
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: database
  name: database
spec:
  ports:
    - name: "7000"
      port: 7000
      targetPort: 8080
    - name: "9090"
      port: 9090
      targetPort: 9090
  selector:
    io.kompose.service: database
status:
  loadBalancer: {}
